--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo/svg/monogram-hq.svg" sizes="64x64"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--PayHere JS SDK-->
+    <script type="text/javascript" src="https://www.payhere.lk/lib/payhere.js"></script>
     <title>Eateazy</title>
   </head>
   <body>
