Uncomment payhere sdk

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,10 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--PayHere JS SDK-->
-    <!-- <script type="text/javascript" src="https://www.payhere.lk/lib/payhere.js"></script> -->
+    <script
+      type="text/javascript"
+      src="https://www.payhere.lk/lib/payhere.js"
+    ></script>
     <title>Eateazy</title>
   </head>
   <body>
